--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "~16.6.0",
+    "primeng": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -31,8 +31,8 @@
     "@angular-devkit/build-angular": "^17.0.6",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.6",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
+    "@types/jasmine": "^5.1.4",
+    "jasmine-core": "^5.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
